--- a/apworlds.html
+++ b/apworlds.html
@@ -54,7 +54,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (242)</h2>
+                <h2>APWorlds (246)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#APBingo">APBingo (Meta)</a></small>
@@ -63,6 +63,7 @@
                 <small>&emsp;<a href="#Manual">Manual (Meta)</a></small>
                 <small>&emsp;<a href="#Shahrazad">Shahrazad (Meta)</a></small>
                 <small>&emsp;<a href="#SlotLock">SlotLock (Meta)</a></small>
+                <small>&emsp;<a href="#SlowReleaseClient">Slow Release Client (Meta)</a></small>
                 <small>&emsp;<a href="#SpoilerFreeTextClient">Spoiler-Free Text Client (Meta)</a></small>
                 <small>&emsp;<a href="#UniversalTracker">Universal Tracker (Meta)</a></small>
                 <br />
@@ -222,6 +223,8 @@
                 <small>&emsp;<a href="#MarioIsMissing">Mario is Missing! (SNES)</a></small>
                 <small>&emsp;<a href="#MarioKart64">Mario Kart 64 (N64)</a></small>
                 <small>&emsp;<a href="#PaperMario64">Paper Mario (N64)</a></small>
+                <small>[Mario Franchise - Hacks]</small>
+                <small>&emsp;<a href="#SM64Romhacks">SM64 Romhacks (N64)</a></small>
                 <br />
                 <small>[Mega Man Franchise - Mega Man Series]</small>
                 <small>&emsp;<a href="#MegaMan2">Mega Man 2 (NES)</a></small>
@@ -274,6 +277,7 @@
                 <small><a href="#Prodigal">Prodigal (PC)</a></small>
                 <small><a href="#Pseudoregalia">Pseudoregalia (PC)</a></small>
                 <small><a href="#Psychonauts">Psychonauts (PC)</a></small>
+                <small><a href="#Quake">Quake (PC)</a></small>
                 <small><a href="#RabiRibi">Rabi-Ribi (PC)</a></small>
                 <small><a href="#Raft">Raft (PC)</a></small>
                 <small><a href="#RatchetAndClankGoingCommando"> Ratchet & Clank: Going Commando (PS2)</a></small>
@@ -330,6 +334,7 @@
                 <br/>
                 <small>[The Legend of Zelda Franchise - Mainline Series]</small>
                 <small>&emsp;<a href="#TheLegendOfZelda">The Legend of Zelda (NES)</a></small>
+                <small>&emsp;<a href="#Zelda2TheAdventureOfLink">Zelda II: The Adventure of Link (NES)</a></small>
                 <small>&emsp;<a href="#TheLegendOfZeldaALinkToThePast">The Legend of Zelda: A Link to the Past (SNES)</a></small>
                 <small>&emsp;<a href="#TheLegendOfZeldaLinksAwakeningDX">The Legend of Zelda: Link's Awakening DX (GBC)</a></small>
                 <small>&emsp;<a href="#TheLegendOfZeldaOcarinaOfTime">The Legend of Zelda: Ocarina of Time (N64)</a></small>
@@ -410,7 +415,7 @@
 
                 <ul>
                     <li>GUI to create YAML files for installed APWorlds</li>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/Silvris/Archipelago/releases">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Silvris/Archipelago/releases?q=%22YAML+Creator%22&expanded=true">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1278481800577941678">Link</a>]</li>
                 </ul>
 
@@ -436,6 +441,14 @@
                     <li>Alternative to Shahrazad</li>
                     <li><strong>APWorld</strong> [<a href="https://github.com/gjgfuj/SlotLock/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1191670867403476992">Link</a>]</li>
+                </ul>
+
+                <h3><span id="SlowReleaseClient"></span> Slow Release Client (Meta)</h3>
+
+                <ul>
+                    <li>Host tool to gradually and logically release an AP slot</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/gjgfuj/AP-SlowRelease/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1331798503898222662">Link</a>]</li>
                 </ul>
                 
                 <h3><span id="SpoilerFreeTextClient"></span> Spoiler-Free Text Client (Meta)</h3>
@@ -656,7 +669,7 @@
                 <h3><span id="Bomberman64"></span> Bomberman 64 (N64)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1326400868773400677/1329149887211769909">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1326400868773400677/1332058680333570111">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1326400868773400677">Link</a>]</li>
                 </ul>
 
@@ -925,7 +938,7 @@
                 <h3><span id="DonkeyKongCountry2DiddysKongQuest"></span> Donkey Kong Country 2: Diddy's Kong Quest (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/TheLX5/Archipelago/releases">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/TheLX5/Archipelago/releases?q=%22Donkey+Kong+Country+2%22&expanded=true">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/pwkfisher/ap-dkc2-tracker/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1023381145565548646">Link</a>]</li>
@@ -999,7 +1012,7 @@
                 <h3><span id="EarthBound"></span> EarthBound (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld + Tracker</strong> PopTracker Pack [<a href="https://github.com/PinkSwitch/Archipelago/releases">Link</a>]</li>
+                    <li><strong>APWorld + Tracker</strong> PopTracker Pack [<a href="https://github.com/PinkSwitch/Archipelago/releases?q=%22EarthBound%22&expanded=true">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1077266688657068032">Link</a>]</li>
                 </ul>
 
@@ -1340,7 +1353,7 @@
 
                 <ul>
                     <li>Multi-game logically-locked objective bingo in a randomized keep</li>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/SerpentAI/Archipelago/releases">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/SerpentAI/Archipelago/releases?q=%22Keymaster%27s+Keep%22&expanded=true">Link</a>]</li>
                     <li><strong>Tracker</strong> In-game tracker</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1321323711676284939">Link</a>]</li>
                 </ul>
@@ -1401,6 +1414,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
+                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1090817012416118815/1324964701528002601">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/OpenKH/OpenKh/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/palex00/kh2-ap-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Kingdom%20Hearts%202/setup/en">Link</a>]</li>
@@ -1424,7 +1438,7 @@
                 <h3><span id="Kirby64TheCrystalShards"></span> Kirby 64: The Crystal Shards (N64)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/Silvris/Archipelago/releases">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Silvris/Archipelago/releases?q=%22Kirby+64%22&expanded=true">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/RunInAWeek/Kirby-64-Archipelago-Tracker/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1175344681928904806">Link</a>]</li>
@@ -1578,6 +1592,16 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1059875783071502398">Link</a>]</li>
                 </ul>
 
+                <h2>Mario Franchise - Hacks</h2>
+
+                <h3><span id="SM64Romhacks"></span> SM64 Romhacks (N64)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/DNVIC/archipelago-sm64hacks/releases">Link</a>]</li>
+                    <li><strong>Resource</strong> JSON repository [<a href="https://github.com/DNVIC/sm64hack-archipelago-jsons">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1333308873448230922">Link</a>]</li>
+                </ul>
+
                 <hr />
 
                 <h2>Mega Man Franchise - Mega Man Series</h2>
@@ -1595,7 +1619,7 @@
                 <h3><span id="MegaMan3"></span> Mega Man 3 (NES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/Silvris/Archipelago/releases">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Silvris/Archipelago/releases?q=%22Mega+Man+3%22&expanded=true">Link</a>]</li>
                     <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Silvris/Archipelago/blob/mm3/worlds/mm3/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1250369456048177152">Link</a>]</li>
@@ -1606,7 +1630,7 @@
                 <h3><span id="MegaManX"></span> Mega Man X (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/TheLX5/Archipelago/releases">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/TheLX5/Archipelago/releases?q=%22Mega+Man+X%22&expanded=true">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/BrianCumminger/megamanx-ap-poptracker/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1134349743984742520">Link</a>]</li>
@@ -1615,7 +1639,7 @@
                 <h3><span id="MegaManX2"></span> Mega Man X2 (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/TheLX5/Archipelago/releases">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/TheLX5/Archipelago/releases?q=%22Mega+Man+X2%22&expanded=true">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/BrianCumminger/megamanx2-ap-poptracker/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1232388647127613490">Link</a>]</li>
@@ -1624,7 +1648,7 @@
                 <h3><span id="MegaManX3"></span> Mega Man X3 (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/TheLX5/Archipelago/releases">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/TheLX5/Archipelago/releases?q=%22Mega+Man+X3%22&expanded=true">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/BrianCumminger/megamanx3-ap-poptracker/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1148331400542568558">Link</a>]</li>
@@ -1799,6 +1823,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
+                    <li><strong>Beta APWorld + Game Mod</strong> 2.x releases [<a href="https://github.com/digiholic/Archipelago/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/digiholic/Archipelago/blob/osrs-world/worlds/osrs/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1311060866598178866">Link</a>]</li>
@@ -1932,10 +1957,19 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1191273397976584212">Link</a>]</li>
                 </ul>
 
+                <h3><span id="Quake"></span> Quake (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/randomcodegen/ironwail_ap/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/randomcodegen/ironwail_ap/blob/master/README.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/1085716850370957462/1332379591431684148">Link</a>]</li>
+                </ul>
+
                 <h3><span id="RabiRibi"></span> Rabi-Ribi (PC)</h3>
 
                 <ul>
                     <li><strong>APWorld + Setup Guide</strong> [<a href="https://github.com/tdkollins/Archipelago-Rabi-Ribi/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/rajanb/RabiRibiPoptracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1183337635805138994">Link</a>]</li>
                 </ul>
 
@@ -1954,6 +1988,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/evilwb/APRac2/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/cloudofdarkhole6/RaC2-poptracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1325015730218860554">Link</a>]</li>
                 </ul>
 
@@ -2339,6 +2374,13 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090821869340467332">Link</a>]</li>
                 </ul>
 
+                <h3><span id="Zelda2TheAdventureOfLink"></span> Zelda II: The Adventure of Link (NES)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/PinkSwitch/Archipelago/releases?q=%22Zelda+II%22&expanded=true">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1239454398367924325">Link</a>]</li>
+                </ul>
+
                 <h3><span id="TheLegendOfZeldaALinkToThePast"></span><span id="ALinkToThePast"></span> The Legend of Zelda: A Link to the Past (SNES)</h3>
 
                 <ul>
@@ -2379,7 +2421,7 @@
                 <h3><span id="TheLegendOfZeldaOracleOfAges"></span><span id="OracleOfAges"></span> The Legend of Zelda: Oracle of Ages (GBC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1279722186902601750/1312234685325246515">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/SenPierre/ArchipelagoOoA/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/Br00ty/ooa_brooty/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/SenPierre/ArchipelagoOoA/blob/oos/worlds/tloz_ooa/docs/ooa_setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1279722186902601750">Link</a>]</li>
@@ -2388,7 +2430,7 @@
                 <h3><span id="TheLegendOfZeldaOracleOfSeasons"></span><span id="OracleOfSeasons"></span> The Legend of Zelda: Oracle of Seasons (GBC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1130706151303041054/1287847292237516872">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Dinopony/ArchipelagoOoS/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/OmegaZeron/Oracle-of-Seasons-AP-Poptracker-Pack/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Dinopony/Archipelago/blob/oos/worlds/tloz_oos/docs/oos_setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1130706151303041054">Link</a>]</li>
@@ -2682,6 +2724,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
+                    <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/Rensen3/poptracker-ygo06/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Yu-Gi-Oh!%202006/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1257454640950149151">Link</a>]</li>
@@ -2711,7 +2754,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
-                    <li><strong>Beta APWorld</strong> 2.0.x releases [<a href="https://github.com/SerpentAI/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> 2.0.x releases [<a href="https://github.com/SerpentAI/Archipelago/releases?q=%22Zork+Grand+Inquisitor%22&expanded=true">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/SerpentAI/ZorkGrandInquisitorAPTracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Zork%20Grand%20Inquisitor/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1224389493289648218">Link</a>]</li>
