--- a/index.html
+++ b/index.html
@@ -49,6 +49,85 @@
                     </p>
                 </header>
 
+                <h2 id="W202504">Week of January 20-26, 2025</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Ape Escape [<a href="apworlds.html#ApeEscape">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Autopelago [<a href="apworlds.html#Autopelago">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Bomberman 64 [<a href="apworlds.html#Bomberman64">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Cuphead [<a href="apworlds.html#Cuphead">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Flipwitch - Forbidden Sex Hex [<a href="apworlds.html#FlipWitchForbiddenSexHex">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> HuniePop [<a href="apworlds.html#HuniePop">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Keymaster's Keep [<a href="apworlds.html#KeymastersKeep">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Oxygen Not Included [<a href="apworlds.html#OxygenNotIncluded">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Paper Mario [<a href="apworlds.html#PaperMario64">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokémon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Satisfactory [<a href="apworlds.html#Satisfactory">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sentinels of the Multiverse [<a href="apworlds.html#SentinelsOfTheMultiverse">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> SlotLock [<a href="apworlds.html#SlotLock">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> The Legend of Zelda: Oracle of Ages [<a href="apworlds.html#TheLegendOfZeldaOracleOfAges">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> The Legend of Zelda: Oracle of Seasons [<a href="apworlds.html#TheLegendOfZeldaOracleOfSeasons">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> WEBFISHING [<a href="apworlds.html#WEBFISHING">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yu-Gi-Oh! Dungeon Dice Monsters [<a href="apworlds.html#YuGiOhDungeonDiceMonsters">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Mario & Luigi: Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> The Legend of Zelda: Link's Awakening DX [<a href="apworlds.html#TheLegendOfZeldaLinksAwakeningDX">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Yacht Dice [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> A Hat in Time [<a href="apworlds.html#AHatInTime">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Autopelago [<a href="apworlds.html#Autopelago">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Flipwitch - Forbidden Sex Hex [<a href="apworlds.html#FlipWitchForbiddenSexHex">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> HuniePop [<a href="apworlds.html#HuniePop">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Oxygen Not Included [<a href="apworlds.html#OxygenNotIncluded">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Satisfactory [<a href="apworlds.html#Satisfactory">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Simon Tatham's Portable Puzzle Collection [<a href="apworlds.html#SimonTathamsPortablePuzzleCollection">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> WEBFISHING [<a href="apworlds.html#WEBFISHING">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Quake [<a href="apworlds.html#Quake">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Slow Release Client [<a href="apworlds.html#SlowReleaseClient">Link</a>]</li>
+                    <li><strong>New APWorld</strong> SM64 Romhacks [<a href="apworlds.html#SM64Romhacks">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Zelda II: The Adventure of Link [<a href="apworlds.html#Zelda2TheAdventureOfLink">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta APWorld</strong> Old School Runescape [<a href="apworlds.html#OldSchoolRunescape">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta Game Mod</strong> Old School Runescape [<a href="apworlds.html#OldSchoolRunescape">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Rabi-Ribi [<a href="apworlds.html#RabiRibi">Link</a>]</li>
+                    <li><strong>New Tracker</strong> Ratchet & Clank: Going Commando [<a href="apworlds.html#RatchetAndClankGoingCommando">Link</a>]</li>
+                    <li><strong>New Tracker</strong> Yu-Gi-Oh! Ultimate Masters: WCT 2006 [<a href="apworlds.html#YuGiOhUltimateMastersWCT2006">Link</a>]</li>
+                </ul>
+
                 <h2 id="W202503">Week of January 13-19, 2025</h2>
 
                 <ul>
