--- a/apworlds.html
+++ b/apworlds.html
@@ -54,10 +54,11 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (246)</h2>
+                <h2>APWorlds (247)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#APBingo">APBingo (Meta)</a></small>
+                <small>&emsp;<a href="#BizHawkUniversalTrackerClient">BizHawk + Universal Tracker Client (Meta)</a></small>
                 <small>&emsp;<a href="#ChristmasDelivery">Christmas Delivery (Meta)</a></small>
                 <small>&emsp;<a href="#LocalYAMLCreator">Local YAML Creator (Meta)</a></small>
                 <small>&emsp;<a href="#Manual">Manual (Meta)</a></small>
@@ -401,6 +402,13 @@
                     <li><strong>Client - Alternate</strong> [<a href="https://cjmang.github.io/APBingoTracker/">Link</a>]</li>
                     <li><strong>Client - Alternate</strong> [<a href="https://github.com/ObsidianMakerDevelopment/APBingoWeb-OBS">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1252051532971638784">Link</a>]</li>
+                </ul>
+
+                <h3><span id="BizHawkUniversalTrackerClient"></span> BizHawk + Universal Tracker Client (Meta)</h3>
+
+                <ul>
+                    <li>BizHawk Client with Univeral Tracker integration</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Rurusachi/Archipelago/releases?q=%22Bizhawk%22&expanded=true">Link</a>]</li>
                 </ul>
 
                 <h3><span id="ChristmasDelivery"></span> Christmas Delivery (Meta)</h3>
@@ -1120,7 +1128,7 @@
                 <h3><span id="FinalFantasyTacticsA2GrimoireOfTheRift"></span> Final Fantasy Tactics A2: Grimoire of the Rift (DS)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/Rurusachi/Archipelago/releases">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Rurusachi/Archipelago/releases?q=%22Final+Fantasy+Tactics+A2%22&expanded=true">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1296095764518277143">Link</a>]</li>
                 </ul>
 
