--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                 </ul>
 
                 <ul>
+                    <li><strong>New APWorld</strong> BizHawk + Universal Tracker Client [<a href="apworlds.html#BizHawkUniversalTrackerClient">Link</a>]</li>
                     <li><strong>New APWorld</strong> Quake [<a href="apworlds.html#Quake">Link</a>]</li>
                     <li><strong>New APWorld</strong> Slow Release Client [<a href="apworlds.html#SlowReleaseClient">Link</a>]</li>
                     <li><strong>New APWorld</strong> SM64 Romhacks [<a href="apworlds.html#SM64Romhacks">Link</a>]</li>
