--- a/apworlds.html
+++ b/apworlds.html
@@ -50,11 +50,11 @@
                         <strong>Archipelago Discord Server</strong> [<a href="https://discord.gg/8Z65BR2">Link</a>]<br />
                         <strong>Alternative Resource:</strong> <a href="https://docs.google.com/spreadsheets/d/1733DtKxylcSmCxn216rOVkJNS-aezFu8nURRw86CjKc/edit?gid=58422002">Community-Maintained Google Sheet</a>
                         <br />
-                        <span>Last Updated: January 27, 2025</span>
+                        <span>Last Updated: February 3, 2025</span>
                     </p>
                 </header>
 
-                <h2>APWorlds (247)</h2>
+                <h2>APWorlds (251)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#APBingo">APBingo (Meta)</a></small>
@@ -261,7 +261,10 @@
                 <small><a href="#Noita">Noita (PC)</a></small>
                 <small><a href="#OldSchoolRunescape">Old School Runescape (PC)</a></small>
                 <small><a href="#OpenRCT2">OpenRCT2 (PC)</a></small>
-                <small><a href="#OriAndTheBlindForest">Ori and the Blind Forest (PC)</a></small>
+                <small>[Ori Franchise]</small>
+                <small>&emsp;<a href="#OriAndTheBlindForest">Ori and the Blind Forest (PC)</a></small>
+                <small>&emsp;<a href="#OriAndTheWillOfTheWisps">Ori and the Will of the Wisps (PC)</a></small>
+                <br />
                 <small><a href="#Osu">Osu! (PC)</a></small>
                 <small><a href="#OuterWilds">Outer Wilds (PC)</a></small>
                 <small><a href="#Overcooked2">Overcooked! 2 (PC)</a></small>
@@ -311,6 +314,8 @@
                 <small><a href="#SlayTheSpire">Slay the Spire (PC)</a></small>
                 <small><a href="#SlyCooperAndTheThieviusRaccoonus">Sly Cooper and the Thievius Raccoonus (PS2)</a></small>
                 <br />
+                <small>[Sonic Franchise - Mainline Series]</small>
+                <small>&emsp;<a href="#SonicTheHedgehog">Sonic the Hedgehog (GEN)</a></small>
                 <small>[Sonic Franchise - Sonic Adventure Series]</small>
                 <small>&emsp;<a href="#SonicAdventureDX">Sonic Adventure DX (PC)</a></small>
                 <small>&emsp;<a href="#SonicAdventure2Battle">Sonic Adventure 2: Battle (PC)</a></small>
@@ -343,7 +348,7 @@
                 <small>&emsp;<a href="#TheLegendOfZeldaOracleOfAges">The Legend of Zelda: Oracle of Ages (GBC)</a></small>
                 <small>&emsp;<a href="#TheLegendOfZeldaOracleOfSeasons">The Legend of Zelda: Oracle of Seasons (GBC)</a></small>
                 <small>&emsp;<a href="#TheLegendOfZeldaTheWindWaker">The Legend of Zelda: The Wind Waker (GC)</a></small>
-                <!-- <small>&emsp;<a href="#TheLegendOfZeldaTwilightPrincess">The Legend of Zelda: Twilight Princess (GC)</a></small> -->
+                <small>&emsp;<a href="#TheLegendOfZeldaTwilightPrincess">The Legend of Zelda: Twilight Princess (GC)</a></small>
                 <small>&emsp;<a href="#TheLegendOfZeldaALinkBetweenWorlds">The Legend of Zelda: A Link Between Worlds (3DS)</a></small>
                 <small>[The Legend of Zelda Franchise - Hacks]</small>
                 <!-- <small>&emsp;<a href="#OcarinaOfTimeMQWaterTemple">Ocarina of Time but it's just Master Quest Water Temple (N64)</a></small> -->
@@ -358,6 +363,7 @@
                 <small><a href="#TUNIC">TUNIC (PC)</a></small>
                 <small><a href="#TurnipBoyCommitsTaxEvasion"> Turnip Boy Commits Tax Evasion (PC)</a></small>
                 <small><a href="#Tyrian">Tyrian (PC)</a></small>
+                <small><a href="#UFO50">UFO 50 (PC)</a></small>
                 <small><a href="#ULTRAKILL">ULTRAKILL (PC)</a></small>
                 <small><a href="#Undertale">Undertale (PC)</a></small>
                 <small><a href="#VacationSimulator">Vacation Simulator (VR)</a></small>
@@ -789,7 +795,8 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
-                    <li><strong>Game Mod</strong> [<a href="https://github.com/PoryGoneDev/Celeste64/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> 1.2.x versions [<a href="https://github.com/PoryGoneDev/Celeste64/releases">Link</a>]</li>
+                    <li><strong>Beta APWorld + Game Mod</strong> 1.3.x versions [<a href="https://github.com/PoryGoneDev/Celeste64/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/PoryGone/Celeste-64-AP-Tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Celeste%2064/guide/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1224388599160635552">Link</a>]</li>
@@ -1287,7 +1294,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/DotsofdarknessArchipelago/HuniePop-APWorld/releases">Link</a>]</li>
-                    <li><strong>Game Mod</strong> [<a href="https://github.com/DotsofdarknessArchipelago/HuniePop-Archipelago-Client/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/DotsofdarknessArchipelago/HuniePop-Archiepelago-Client/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/1085716850370957462/1291278671621128222">Link</a>]</li>
                 </ul>
 
@@ -1788,6 +1795,7 @@
 
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/TheNooodle/MinishootRandomizer/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> In-Game Tracker</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1307687662798508113">Link</a>]</li>
                 </ul>
 
@@ -1845,6 +1853,8 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1095746758774108240">Link</a>]</li>
                 </ul>
 
+                <h2>Ori Franchise</h2>
+
                 <h3><span id="OriAndTheBlindForest"></span> Ori and the Blind Forest (PC)</h3>
 
                 <ul>
@@ -1854,6 +1864,16 @@
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/c-ostic/OriBFArchipelago/blob/main/Setup.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1036405779726610452">Link</a>]</li>
                 </ul>
+
+                <h3><span id="OriAndTheWillOfTheWisps"></span> Ori and the Will of the Wisps (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/Satisha10/APwotw_release/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/Satisha10/APwotw_release/blob/main/README.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1272952565843103765">Link</a>]</li>
+                </ul>
+
+                <hr />
 
                 <h3><span id="Osu"></span> Osu! (PC)</h3>
 
@@ -2202,6 +2222,17 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1170557242660093952">Link</a>]</li>
                 </ul>
 
+                <h2>Sonic Franchise - Mainline Series</h2>
+
+                <h3><span id="SonicTheHedgehog"></span> Sonic the Hedgehog (GEN)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/kaithar/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/kaithar/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/kaithar/Archipelago/blob/sonic1/worlds/sonic1/README.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1212629606608408576">Link</a>]</li>
+                </ul>
+
                 <h2>Sonic Franchise - Sonic Adventure Series</h2>
 
                 <h3><span id="SonicAdventureDX"></span> Sonic Adventure DX (PC)</h3>
@@ -2257,6 +2288,7 @@
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Eszenn/Archipelago/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://spelunky.fyi/mods/m/spelunky-2-archipelago/">Link</a>]</li>
+                    <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/Bogdan1000pink/Spelunky-2-Tracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1142626744629735555">Link</a>]</li>
                 </ul>
 
@@ -2340,8 +2372,9 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
-                    <li><strong>Beta APWorld + Game Mod</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1148330488482767008/1283619338313797674">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1148330488482767008/1283619338313797674">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2922217554">Link</a>]</li>
+                    <li><strong>Beta Game Mod</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1148330488482767008/1333667213466538025">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/SerpentAI/TerrariaAPTracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Terraria/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1148330488482767008">Link</a>]</li>
@@ -2386,6 +2419,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/PinkSwitch/Archipelago/releases?q=%22Zelda+II%22&expanded=true">Link</a>]</li>
+                    <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/palex00/zelda-2-ap-tracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1239454398367924325">Link</a>]</li>
                 </ul>
 
@@ -2454,12 +2488,13 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1080383306748678165">Link</a>]</li>
                 </ul>
 
-                <!-- <h3><span id="TheLegendOfZeldaTwilightPrincess"></span> The Legend of Zelda: Twilight Princess (GC)</h3>
+                <h3><span id="TheLegendOfZeldaTwilightPrincess"></span> The Legend of Zelda: Twilight Princess (GC)</h3>
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/WritingHusky/Twilight_Princess_apworld/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/WritingHusky/Twilight_Princess_apworld/blob/main/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1110253490875404388">Link</a>]</li>
-                </ul> -->
+                </ul>
 
                 <h3><span id="TheLegendOfZeldaALinkBetweenWorlds"></span> The Legend of Zelda: A Link Between Worlds (3DS)</h3>
 
@@ -2567,6 +2602,14 @@
                     <li><strong>Game Download</strong> [<a href="https://www.gog.com/en/game/tyrian_2000">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/KScl/TyrianAPWorld/blob/main/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1224498137570349076">Link</a>]</li>
+                </ul>
+
+                <h3><span id="UFO50"></span> UFO 50 (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/UFO-50-Archipelago/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/UFO-50-Archipelago/Archipelago/blob/main/worlds/ufo50/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1286076770445164575">Link</a>]</li>
                 </ul>
 
                 <h3><span id="ULTRAKILL"></span> ULTRAKILL (PC)</h3>
