--- a/index.html
+++ b/index.html
@@ -49,6 +49,74 @@
                     </p>
                 </header>
 
+                <h2 id="W202505">Week of January 27 - February 2, 2025</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Ape Escape [<a href="apworlds.html#ApeEscape">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> BizHawk + Universal Tracker Client [<a href="apworlds.html#BizHawkUniversalTrackerClient">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Corn Kidz 64 [<a href="apworlds.html#CornKidz64">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Diddy Kong Racing [<a href="apworlds.html#DiddyKongRacing">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Duke Nukem 3D: Atomic Edition [<a href="apworlds.html#DukeNukem3DAtomicEdition">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy Tactics Advance [<a href="apworlds.html#FinalFantasyTacticsAdvance">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy Tactics A2: Grimoire of the Rift [<a href="apworlds.html#FinalFantasyTacticsA2GrimoireOfTheRift">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Getting Over It with Bennett Foddy [<a href="apworlds.html#GettingOverItWithBennettFoddy">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Keymaster's Keep [<a href="apworlds.html#KeymastersKeep">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Ori and the Blind Forest [<a href="apworlds.html#OriAndTheBlindForest">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokémon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Resident Evil 3 (Remake) [<a href="apworlds.html#ResidentEvil3">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Slow Release Client [<a href="apworlds.html#SlowReleaseClient">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sly Cooper and the Thievius Raccoonus [<a href="apworlds.html#SlyCooperAndTheThieviusRaccoonus">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> SM64 Romhacks [<a href="apworlds.html#SM64Romhacks">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> SpongeBob SquarePants: Battle for Bikini Bottom [<a href="apworlds.html#SpongeBobSquarePantsBattleForBikiniBottom">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wario Land 4 [<a href="apworlds.html#WarioLand4">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> WEBFISHING [<a href="apworlds.html#WEBFISHING">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Terraria [<a href="apworlds.html#Terraria">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Corn Kidz 64 [<a href="apworlds.html#CornKidz64">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> DLC Quest [<a href="apworlds.html#DLCQuest">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Getting Over It with Bennett Foddy [<a href="apworlds.html#GettingOverItWithBennettFoddy">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Minishoot' Adventures [<a href="apworlds.html#MinishootAdventures">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Resident Evil 3 (Remake) [<a href="apworlds.html#ResidentEvil3">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Satisfactory [<a href="apworlds.html#Satisfactory">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Timespinner [<a href="apworlds.html#Timespinner">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> WEBFISHING [<a href="apworlds.html#WEBFISHING">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Ori and the Will of the Wisps [<a href="apworlds.html#OriAndTheWillOfTheWisps">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Sonic the Hedgehog [<a href="apworlds.html#SonicTheHedgehog">Link</a>]</li>
+                    <li><strong>New APWorld</strong> The Legend of Zelda: Twilight Princess [<a href="apworlds.html#TheLegendOfZeldaTwilightPrincess">Link</a>]</li>
+                    <li><strong>New APWorld</strong> UFO 50 [<a href="apworlds.html#UFO50">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta APWorld</strong> Celeste 64 [<a href="apworlds.html#Celeste64">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta Game Mod</strong> Celeste 64 [<a href="apworlds.html#Celeste64">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Spelunky 2 [<a href="apworlds.html#Spelunky2">Link</a>]</li>
+                    <li><strong>New Tracker</strong> Zelda II: The Adventure of Link [<a href="apworlds.html#Zelda2TheAdventureOfLink">Link</a>]</li>
+                </ul>
+
                 <h2 id="W202504">Week of January 20-26, 2025</h2>
 
                 <ul>
