--- a/apworlds.html
+++ b/apworlds.html
@@ -2175,6 +2175,7 @@
 
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/BlastSlimey/shapezipelago/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/BlastSlimey/Archipelago/blob/main/worlds/shapez/docs/setup_en.md ">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1259157584783478814">Link</a>]</li>
                 </ul>
 
